--- a/2013/css/animations.css
+++ b/2013/css/animations.css
@@ -760,7 +760,7 @@
 
 }
 
-#content-wrapper{	
+/*#content-wrapper{	
 	-webkit-animation-duration: 0.6s;
 	   -moz-animation-duration: 0.6s;
 	     -o-animation-duration: 0.6s;
@@ -775,7 +775,7 @@
 	-moz-animation-timing-function: linear;
 	-o-animation-timing-function: linear;
 	animation-timing-function: linear;
-}
+}*/
 
 .paused img{
 	-webkit-animation-play-state: paused;
@@ -933,7 +933,7 @@
 }
 
 
-#content-wrapper{
+/*#content-wrapper{
 
 	-webkit-animation-name: fadeInDown;
 	-webkit-animation-duration:300ms;
@@ -951,7 +951,7 @@
 	animation-name: fadeInDown;
 	animation-duration:300ms;
 	animation-timing-function: linear;
-}
+}*/
 
 /*#content-wrapper .team-mate-bio.animate{
 	animation-name: fadeOutUp, fadeInDown;
@@ -963,6 +963,43 @@
 .no-animation{
 	animation: none;
 }*/
+
+@-webkit-keyframes fadeOut {
+	0% {opacity: 1;}
+	100% {opacity: 0;}
+}
+
+@-moz-keyframes fadeOut {
+	0% {opacity: 1;}
+	100% {opacity: 0;}
+}
+
+@-o-keyframes fadeOut {
+	0% {opacity: 1;}
+	100% {opacity: 0;}
+}
+
+@keyframes fadeOut {
+	0% {opacity: 1;}
+	100% {opacity: 0;}
+}
+
+.fadeOut {
+	-webkit-animation-name: fadeOut;
+	-moz-animation-name: fadeOut;
+	-o-animation-name: fadeOut;
+	animation-name: fadeOut;
+
+		-webkit-animation-duration: 500ms;
+	   -moz-animation-duration: 500ms;
+	     -o-animation-duration: 500ms;
+	        animation-duration: 500ms;
+	-webkit-animation-fill-mode: both;
+	   -moz-animation-fill-mode: both;
+	     -o-animation-fill-mode: both;
+	        animation-fill-mode: both;
+
+}
 
 
 #content-wrapper .team-mate-bio .graph-wrapper{
@@ -1200,6 +1237,23 @@
 	}
 }
 
+
+.fadeIn {
+	-webkit-animation-name: fadeIn;
+	-moz-animation-name: fadeIn;
+	-o-animation-name: fadeIn;
+	animation-name: fadeIn;
+
+		-webkit-animation-duration: 500ms;
+	   -moz-animation-duration: 500ms;
+	     -o-animation-duration: 500ms;
+	        animation-duration: 500ms;
+	-webkit-animation-fill-mode: both;
+	   -moz-animation-fill-mode: both;
+	     -o-animation-fill-mode: both;
+	        animation-fill-mode: both;
+
+}
 
 @-webkit-keyframes fadeIn{
 	0%{
