--- a/2013/css/style.css
+++ b/2013/css/style.css
@@ -1147,3 +1147,224 @@ em{
 .ring:hover .services-icon.star{
 	background-position: -235px -34px;
 }
+
+.contact{
+	position:relative;
+	z-index:0;
+	margin-top: 50px;
+}
+
+.contact-heading{
+	width:100%; 
+	background-color: #fbaf3f; 
+	z-index: 1; 
+	margin-bottom: -14px;
+}
+
+
+.contact-heading h1{
+	color: #fff;
+	line-height: 145px;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 36px;
+	font-weight: bold;
+	text-align: center;
+	z-index:1;
+}
+
+#map-canvas{
+	width: 100%;
+	height: 400px;
+}
+.rotate{
+	/* Safari */
+	-webkit-transform: rotate(-90deg);
+	/* Firefox */
+	-moz-transform: rotate(-90deg);
+	/* IE */
+	-ms-transform: rotate(-90deg);
+	/* Opera */
+	-o-transform: rotate(-90deg);
+	/* Internet Explorer */	
+	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+	/* Standard */
+	transform: rotate(-90deg);
+	width: 100%;
+	margin-top: 154px;
+}
+
+.addresses{
+	list-style: none;	
+}
+
+.addresses li a{
+	color: #535353;	
+	font-size: 14px;
+	font-weight: bold;
+	text-transform: uppercase;
+	position: relative;
+	display: inline-block;
+	margin-bottom: 14px;
+}
+
+.addresses li a:after{
+	content: "";
+	background: url(../img/small-arrow-left.png) no-repeat;
+	width: 16px;
+	height: 16px;
+	position: absolute;
+	display: block;
+	top: 4px;
+	right: -30px;
+}
+.addresses li a:hover{
+	color: #fbaf3f;
+}
+.addresses li a:hover:after{
+	background-position: 0 -16px;
+}
+
+.addresses li p{
+	margin-bottom: 45px;
+	color: #9f9f9f;
+}
+
+img.lets-talk{
+	margin-top: 45px;
+	margin-left: 130px;
+}
+.contact-info{
+	padding: 0;
+}
+
+.contact-info h3{
+	text-align: center;
+	margin: 0;
+}
+
+.contact-info .dots{
+	margin: 0 auto 10px;
+}
+
+.contact-form{
+	color: #9f9f9f;
+	font-size: 12px;
+	float: right;
+	width: 500px;
+	margin-right: 10px;
+	margin-bottom: 0;
+}
+.contact-info .column{
+	padding: 40px 0 10px;
+}
+.contact-info .column.six p{
+	color: #9f9f9f;
+	font-size: 12px;
+	text-align: center;
+}
+
+.contact-info .column.six p.required{
+	float: left;
+	line-height: 42px;
+}
+.contact-form button{
+	width: 78px;
+	height: 42px;
+	float: right;
+	background-color: #fcb040;
+	color: #FFF;
+	border: none;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	-ms-border-radius: 4px;
+	-o-border-radius: 4px;
+	border-radius: 4px;
+
+	text-align: center;
+	text-transform: uppercase;
+	font-weight: bold;
+	cursor: pointer;
+
+	-webkit-transition-property: all;
+	-moz-transition-property: all;
+	-o-transition-property: all;
+	transition-property: all;
+	-webkit-transition-duration: 275ms;
+	-moz-transition-duration: 275ms;
+	-o-transition-duration: 275ms;
+	transition-duration: 275ms;;
+	-moz-background-clip: padding;
+	-webkit-background-clip: padding-box;
+	background-clip: padding-box;
+
+}
+
+.contact-form button:hover{
+	background-color: #545454;
+}
+.contact-form label{
+	float: left;	
+	position: relative;
+}
+.contact-form span{	
+  position: absolute;    
+  top:0;
+  left:0;
+  color: #9f9f9f;
+  font-size: 12px;	
+  line-height: 12px;
+  padding: 15px 10px 12px;	
+
+}
+
+input[type="text"], textarea { 
+	background-color: white;
+	color: #9f9f9f;
+	font-size: 12px;	
+	line-height: 12px;
+	border: 1px solid #e9e9e9;
+	-webkit-border-radius: 2px;
+	-moz-border-radius: 2px;
+	-ms-border-radius: 2px;
+	-o-border-radius: 2px;
+	border-radius: 2px;
+	-moz-box-shadow: inset 0 0 6px rgba(0,0,0,.04);
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.04);
+	box-shadow: inset 0 0 6px rgba(0,0,0,.04); 
+	display: block; 
+	margin: 0 0 12px 0;
+	padding: 12px 10px;	
+	width: 239px;
+	float: left;
+	-webkit-transition: all 0.15s linear;
+	-moz-transition: all 0.15s linear;
+	-o-transition: all 0.15s linear;
+	transition: all 0.15s linear;
+	margin-right: 20px;	
+}
+
+input[type="text"].last{
+	margin-right: 0;
+}
+
+textarea{
+	height: auto;
+	width: 498px;
+	font: inherit;
+	font-size: 12px;
+}
+input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="time"]:focus, input[type="url"]:focus, textarea:focus { background: #fafafa;
+ border-color: #b3b3b3; }
+
+
+.orange-required{
+	color: #f14829 !important; 	
+	position: relative !important;
+	padding: 0 !important;
+}
+
+.bordered{
+	height: 427px;
+	border-left: 1px solid #f6f6f6;
+	border-right: 1px solid #f6f6f6;
+}
