--- a/2013/css/style.css
+++ b/2013/css/style.css
@@ -22,6 +22,9 @@ header{
 	position: relative;
 }
 
+#content-wrapper{
+	overflow: hidden;
+}
 h1{
 	color: #535353;	
 	font-size: 48px;
@@ -382,8 +385,8 @@ nav ul li a.selected, nav ul li a:hover{
 }
 
 .team-mate .team-mate-mask{
-	width: 142px;
-	height: 142px;
+	width: 144px;
+	height: 144px;
 	background: url(../img/mask-circle.png) no-repeat;
 	display: block;
 	position: absolute;
@@ -500,10 +503,10 @@ nav ul li a.selected, nav ul li a:hover{
 
 }
 
-.team-mate-bio .info .social-media .github{
+.team-mate-bio .info .social-media .google{
 	width: 9px;
 	height: 40px;
-	background: url(../img/employee-github.png) center center no-repeat;	
+	background: url(../img/employee-google.png) center center no-repeat;	
 	display: inline-block;	
 	border-right: 1px solid #ebebeb;
 	padding: 0 25px;
@@ -840,7 +843,7 @@ footer ul li a:hover{
 	background-color: #f7f7f7;
 	border-bottom: 1px solid #e9e9e9;
 	border-top: 1px solid #e9e9e9;
-	margin-top: 50px;
+	margin-top: 140px;
 	overflow: hidden;
 }
 .header-gray-planner h1{
@@ -1183,6 +1186,7 @@ em{
 	background-color: #fbaf3f; 
 	z-index: 1; 
 	margin-bottom: -14px;
+	margin-top: 140px;
 }
 
 
