--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -1,4 +1,4 @@
-@import "common";
+﻿@import "common";
 @import "bourbon";
 
 ul {
@@ -73,19 +73,25 @@ body {
 }
 
 div.dialog {
-  width: 25em;
+  width: 45em;
   padding: 0 4em;
   margin: 4em auto 0 auto;
-  border: 2px solid #1688C3;
-  border-right-color: #1688C3;
-  border-bottom-color: #1688C3;
-  background-color: #fff;
-  color: #666;
+  color: #FFF;
   text-align: center;
   font-family: arial, sans-serif;
 
-  h1 {
-    font-size: 18px;
+  h1.errorTitle {
+    font-size: 32px;
+    color:#1588c3;
+
+    code.errorCode {
+      font-size:inherit;
+    }
+    
+  }
+  
+  h2.errorDescription {
+    font-size:18px;
   }
 }
 
