--- a/app/views/errors/not_found.html.haml
+++ b/app/views/errors/not_found.html.haml
@@ -1,4 +1,10 @@
 %section.primary
 .dialog
-  %h1 The page you were looking for doesn't exist.
-  %p You may have mistyped the address or the page may have moved.
+  %h1.errorTitle 
+    %code.errorCode 
+      404
+    - Page Not Found
+  %h2.errorDescription 
+    Uh-Oh! The page you were looking for doesn't exist.
+  %p 
+    You may have mistyped the address or the page may have moved.
