Updated to use sass variables and color names

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -1,6 +1,9 @@
 ﻿@import "common";
 @import "bourbon";
 
+$light_cobalt_blue: #1588c3;
+$dark_grey: #666666;
+
 ul {
   list-style-type: none;
 }
@@ -76,13 +79,13 @@ div.dialog {
   width: 45em;
   padding: 0 4em;
   margin: 4em auto 0 auto;
-  color: #FFF;
+  color: white;
   text-align: center;
   font-family: arial, sans-serif;
 
   h1.errorTitle {
     font-size: 32px;
-    color:#1588c3;
+    color:$light_cobalt_blue;
 
     code.errorCode {
       font-size:inherit;
@@ -236,9 +239,9 @@ footer {
     text-transform: uppercase;
     color: $dark-blue;
     a {
-      color: #ffffff;
+      color: white;
       &:hover {
-        color: #000000;
+        color: black;
       }
     }
   }
@@ -279,7 +282,7 @@ footer {
 }
 
 .reveal-modal {
-  color: #666;
+  color: $dark_grey;
 }
 
 .post {
