--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -81,7 +81,7 @@
           %p
             = person.name
     %li.last
-      %a{:href => '#', 'data-reveal-id' => 'jobs'}
+      %a{:href => jobs_path}
         .new
         = image_tag("team/new.png", :mouseover => "team/new-white.png")
         %p
