Fixed dash escape character

--- a/app/views/errors/not_found.html.haml
+++ b/app/views/errors/not_found.html.haml
@@ -2,7 +2,7 @@
   %h1.errorTitle 
     %code.errorCode 
       404
-    - Page Not Found
+      \- Page Not Found
   %h2.errorDescription 
     Uh-Oh! The page you were looking for doesn't exist.
   %p 
