Switches to only displaying featured projects
 - fixes issue with rowify where count is incorrect when using relations as arrays and adding elements
 - fixes bug where user could not set 'featured' flag on project
 - adds title and description to portfolio projects because we're not just a design shop
 - title and description need some design love, because we are a design shop too

--- a/app/views/projects/_project.html.haml
+++ b/app/views/projects/_project.html.haml
@@ -1,4 +1,6 @@
 .fp_img{:class => "no#{row*3 + i}"}
+  %h3= p.title
+  %aside= p.description
   =image_tag p.picture_url if p.picture?
   .overlay
     .link-wrapper
