Fixed h1 being styled as code

--- a/app/views/errors/not_found.html.haml
+++ b/app/views/errors/not_found.html.haml
@@ -1,7 +1,6 @@
 .dialog
   %h1.errorTitle 
-    %code.errorCode 
-      404
+    %code.errorCode 404
       \- Page Not Found
   %h2.errorDescription 
     Uh-Oh! The page you were looking for doesn't exist.
