Changed number font sizes

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -88,7 +88,7 @@ div.dialog {
     color:$light_cobalt_blue;
 
     code.errorCode {
-      font-size:inherit;
+      font-size:34px;
     }
     
   }
