Make description text less cramped

--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -59,6 +59,7 @@ body .container .row .message-tabs {
       margin-bottom: 5px;
     }
     p {
+      margin-top:15px;
       font: 11px "Droid Serif", serif;
     }
   }
