Added Austin office to location listings

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -204,6 +204,11 @@ ul#nav li {
   }
 }
 
+.fourfoot {
+  width:auto !important;
+  padding: 0 10px;
+}
+
 footer {
   margin-top: 100px;
   background: $blue;
