Changed city names to state names for continuity

--- a/app/views/home/_maps.html.haml
+++ b/app/views/home/_maps.html.haml
@@ -15,14 +15,14 @@
 .row
   .six.columns
     %h5 SAN FRANCISCO
-    %p.graytext Our residence in San Francisco
+    %p.graytext Our residence in California
     %a{:target => '_blank', :href => "https://maps.google.com/maps?q=972+mission+street&ie=UTF-8&hq=&hnear=0x808580843dfd203b:0x7a8e975abf04adee,972+Mission+St,+San+Francisco,+CA+94103&gl=us&ei=xTFmUMrcN4joigKG2oCgAw&ved=0CCAQ8gEwAA"}
       =image_tag("map_sf.png")
     %p.graytext 972 Mission Street, 5th Floor, San Francisco, CA 94103
 
   .six.columns
     %h5 AUSTIN
-    %p.graytext Our saloon in Austin
+    %p.graytext Our saloon in Texas
     %a{:target => '_blank', :href => "https://maps.google.com/maps?q=701+Brazos+Street+Suite+1601+Austin+TX&hl=en&ll=30.268278,-97.737937&spn=0.013881,0.027401&sll=40.02931,-105.239977&sspn=0.196903,0.438423&hnear=701+Brazos+St+%231601,+Austin,+Travis,+Texas+78701&t=m&z=16"}
       =image_tag("map_austin.png")
     %p.graytext 701 Brazos Street, Suite 1601, Austin, TX 78701
