Next and submit buttons float right

--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -3,3 +3,12 @@ form.internal {
     width: 100%;
   }
 }
+.quote-submit-link {
+	width:15%;
+	text-align: center;
+	float:right;	
+}
+.next {
+	float:right;
+	width:auto;
+}
