--- a/app/views/messages/_contact.html.haml
+++ b/app/views/messages/_contact.html.haml
@@ -32,3 +32,11 @@
       .link
         %a.a-button.darkblue.submit-link{:href => '#'}
           ='Send mail'.html_safe
+:javascript
+$(document).ready(function() {
+  $(".submit-link").click(function (e) {
+      e.preventDefault();
+      console.log("submit-link clicked!");
+      if (validate_contact()==1) $("#contact-form").submit();
+    });
+})
