--- a/app/views/messages/_quote.html.haml
+++ b/app/views/messages/_quote.html.haml
@@ -67,3 +67,42 @@
         ='← Back'.html_safe
       %a.a-button.darkblue.quote-submit-link{:href => '#'}
         ='Submit <div class="arrow"></div>'.html_safe
+:javascript
+$(document).ready(function() {
+  $(".quote-submit-link").click(function (e) {
+      e.preventDefault();
+      if (validate_quote() == 1) $("#quote-form").submit();
+    });
+    $('#message_name').focus().prev().css("color","#FFF");
+    
+    $(".next-link").click(function (e) {
+      console.log("next-link fired!");
+      e.preventDefault();
+      var currentSlide = extractSlideNum($('.quote-slide.active').attr('class'));
+      var nextSlide = parseInt($(this).attr("data-slide"),10);
+      findSlideWithNumber(currentSlide).fadeOut(function() {
+        //$(".quote-slide").hide();
+        $('.quote-slide.active').removeClass('active');
+        findSlideWithNumber(nextSlide).fadeIn(function() {
+          $(".slide" + nextSlide).addClass('active');
+          currentSlide = nextSlide;
+        });
+      });
+    });
+
+    $('label').next().focus(function(e) {
+      $(this).prev().css("color","#FFFFFF");
+    });
+    $('label').next().blur(function(e) {
+      $(this).prev().css("color","#004264");
+    });
+
+    function findSlideWithNumber(num) {
+      return $('.slide'+num);
+    }
+
+    function extractSlideNum(slideClasses) {
+      var slidePos = slideClasses.search(/ slide/gi) + 6;
+      return parseInt(slideClasses.slice(slidePos,slidePos+1));
+    }
+});
