Changed css properties to classes

--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -35,6 +35,9 @@
     box-shadow: inner 0 0 10px #000;
     border:1px solid #000000;
   }
+  .whiteText {
+    color:white;
+  }
 }
 
 .long-field textarea {
