implements header from static redesign

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -73,10 +73,9 @@ body p {
   }
 
   h1 {
-    color: white;
+    color: #535353;
     font: bold 48px 'PT Sans', sans-serif;
     text-transform: uppercase;
-    display: block;
     text-align: center;
   }
 
