--- a/app/assets/stylesheets/custom_foundation.scss
+++ b/app/assets/stylesheets/custom_foundation.scss
@@ -36,6 +36,15 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,p,blockquote,th,td {
   padding:0;
 }
 
+
+/* Lists ---------------------- */
+ul, ol, dl { font-size: 14px; line-height: 1.6; margin-bottom: 15px; list-style-position: outside; }
+
+
+/* The Grid ---------------------- */
+.row { width: 1140px; max-width: 100%; min-width: 768px; margin: 0 auto; }
+
+
 @import "foundation/common/forms";
 
 @import "foundation/components/modules/buttons";
