--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -8,9 +8,8 @@ ul {
   list-style-type: none;
 }
 
-html {
-
-  overflow-x: hidden;
+.clear{
+  clear: both;
 }
 
 h2 {
@@ -22,53 +21,49 @@ h2 {
 }
 
 body {
-  background: transparent image-url("tile_background.png") repeat -20px 0px scroll;
-  overflow-x: hidden;
+  background: black;
   color: white;
+  -webkit-backface-visibility: hidden;
 }
 
-#logo {
-  width: 169px;
-  height: 100px;
-  background: transparent image-url("logo.png") no-repeat;
-  display: block;
-  margin-top: 20px;
+h1#logo {
+  margin-top: 0;
+  left: 0;
 }
 
-#ribbon {
-  width: 50px;
-  height: 117px;
-  background: transparent image-url("ribbon.png") no-repeat;
-  z-index: 50;
-  position: absolute;
-  display: block;
-  right: 0px;
-  top: -6px;
-  text-align: center;
-  a {
-    display: block;
-    margin-top: 15px;
-    margin-left: 10px;
-  }
-  a#twitter {
-    width: 32px;
-    height: 24px;
-    background: image-url("banner_twitter.png") no-repeat;
-    &:hover {
-      background-position: 0px -25px;
-    }
-  }
-  a#facebook {
-    width: 24px;
-    height: 21px;
-    background: image-url("facebook.png") no-repeat;
-    margin-top: 18px;
-    &:hover {
-      background-position: 0px -22px;
-    }
-    position: relative;
-    left: 3px;
-  }
+h1#logo.no-animation {
+  opacity: 1;
+}
+
+#header-content h1#logo {
+  position: absolute; 
+  /*left: 50%;
+  margin-left: -101px;*/
+}
+
+h1#logo a {
+  width: 261px;
+  height: 55px;
+  background: image-url("logo.png") no-repeat;
+  float: left;
+  margin-top: 45px;
+}
+
+h1#logo:hover a {
+  background-position: 0px -55px;
+}
+
+h1#logo-light a {
+  background: image-url("logo-light.png") no-repeat;
+  width: 261px;
+  height: 55px;
+  float: left;  
+  margin-top: 140px;
+}
+
+
+h1#logo-light:hover a {
+  background-position: 0px -55px;
 }
 
 .content {
@@ -98,82 +93,59 @@ div.dialog {
   }
 }
 
-@media screen and (max-width: 450px) {
-
-  ul#nav {
-    border-bottom: 2px solid $blue;
-    overflow: hidden;
-
-    li {
-      float: left;
-      width: 33% !important;
-      &:nth-child(3) {
-        background: none !important;
-      }
-    }
-  }
-}
-
-ul#nav li {
-  float: left;
-  width: 16.667%;
-  background: url(menu-border.png) no-repeat right 6px;
-  border-bottom: 1px solid $blue;
-
-  &.selected {
-    a:after {
-      text-align: center !important;
-      margin-top: 20px;
-      width: 17%;
-      height: 25px;
-      content: ' ';
-      display: block;
-      background: url(triangle.png) no-repeat center 1px;
-      position: absolute;
-    }
-  }
-
-  &:last-child {
-    background: none;
-  }
-
-  a {
-    padding-top: 20px;
-    text-align: center;
-    display: block;
-    height: 60px;
-    line-height: 68px;
-    font: 14px "PT Sans", sans-serif;
-    color: white;
-    overflow: hidden;
-
-    -webkit-transition: all 0.3s ease-out; /* Safari 3.2+, Chrome */
-    -moz-transition: all 0.3s ease-out; /* Firefox 4-15 */
-    -o-transition: all 0.3s ease-out; /* Opera 10.5–12.00 */
-    transition: all 0.3s ease-out; /* Firefox 16+, Opera 12.50+ */
-
-    &:hover {
-      color: $blue !important;
-    }
-
-  }
-  &.selected a {
-    color: $blue !important;
-  }
-}
-
 #nav {
-  margin-top: 20px;
-  border-top: 2px solid $blue;
-  list-style-type: none;
+  margin-top: 12px;
 }
 
-.main-container {
-  border-top: 6px solid black;
+#header-content nav {
+  margin-top: 12px;
 }
 
 #header {
+  width: 100%;
+  background: #FFFFFF;
+  border-bottom: 1px solid #e9e9e9;
+  padding-bottom: 40px;
+  z-index: 10;
+  position: fixed;
+  margin-top: -50px;
+}
+
+#header-content {
   position: relative;
+}
+
+nav ul {
+  float: right;
+  margin-top: 48px;
+}
+
+nav ul li {
+  list-style-type: none;
+  float: left;
+  margin-left: 40px;
+}
+
+nav ul li a {
+  color: #9f9f9f;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+nav ul a.active {
+  color: #fcb040; 
+}
+
+nav ul li a.selected, nav ul li a:hover {
+  webkit-transition: all 275ms;
+     -moz-transition: all 275ms;
+     -o-transition: all 275ms;
+     transition: all 275ms;
+  color: #fcb040; 
+}
+
+#content-wrapper {
+  overflow: hidden;
 }
 
 @media screen and (max-width: 767px) {
