--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,18 +1,20 @@
-= link_to "CAREERS", jobs_path, :class => 'jobs'
+//= link_to "CAREERS", jobs_path, :class => 'jobs'
+#site-loader.loader{:style => "width: 100%; height: 3px; background-color: #fcb040;"}
+#header-content.row
 
-.logo-banner
-  %a#logo{:href => root_path}
+	%h1#logo
+		%a{:href => root_path}
 
-#ribbon
-  %a#twitter{:href => "https://www.twitter.com/coshxlabs", :title => "Twitter"}
-  %a#facebook{:href => "https://www.facebook.com/CoshxLabs", :title => "FaceBook"}
+	%nav
+		%ul#main-nav
+			// = tab_to "HOME", root_path
+			= tab_to "About us", about_path
+			= tab_to "Our projects", projects_path
+			= tab_to "Our services", services_path
+			= tab_to "Blog", blog_posts_path
+			= tab_to "Contact us", contact_path
+			= tab_to "Careers", jobs_path
+	  
 
-%ul#nav
-  = tab_to "HOME", root_path
-  = tab_to "ABOUT US", about_path
-  = tab_to "OUR PROJECTS", projects_path
-  = tab_to "OUR SERVICES", services_path
-  = tab_to "OUR BLOG", blog_posts_path
-  = tab_to "CONTACT US", contact_path
 
-=render 'jobs/jobs'
+//=render 'jobs/jobs'
