--- a/app/assets/stylesheets/custom_foundation.scss
+++ b/app/assets/stylesheets/custom_foundation.scss
@@ -31,6 +31,9 @@
 // typography includes stuff that has nothing to do with typography :(
 // let's fix it here:
 
+body { font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+
+
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,p,blockquote,th,td {
   margin:0;
   padding:0;
