--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -1,14 +1,40 @@
 p {
   margin-bottom:17px;
+  font-family: inherit;
+  font-weight: normal;
+  line-height: 1.6;
 }
 
 h1, h2, h3, h4, h5 {
+	font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
   margin-top:14px;
   margin-bottom:14px;
   text-rendering: optimizeLegibility;
+  line-height: 1.3;
+  font-weight: bold; 
+  font-style: normal;
+  color: #535353;
+}
+
+a {
+	color: #9f9f9f;
+}
+
+a:hover {
+  color: #fcb040; 
 }
 
 h1 {
-  font-size:44px;
+  font-size:48px;
+  color: #535353;
+  font-weight: bold;
+	text-align: center;
+	text-transform: uppercase;	
+}
 
+h3 {
+	font-size: 18px;
+	line-height: 30px;
+	color: #545454;
+	text-transform: uppercase;
 }
